src/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CSS reset ends*/

a {
  color: inherit;
  text-decoration: inherit;
}

body {
  background-color: #BBADA0;
  color: white;
  font-family: 'Ubuntu', sans-serif;
  text-align: center;
  margin: 0;
}

header {
  background-color: black;
  padding: 10px 0 15px 0;
  text-align: left;
}

h1 {
  margin: 5px;
  font-size: 2em;
  font-weight: bold;
}

h4 {
  font-size: 1.33em;
  font-weight: bold;
}

p {
  font-size: 12px;
}

span {
  color: yellow;
}

svg {
  width: 0;
  height: 0;
  position: absolute;
}

.container {
  width: 450px;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.icon {
  width: 60px;
  height: 60px;
  margin: 0 25px;
}

.heading {
  width: 320px;
  margin: 0 20px;
}

.score-board {
  background-color: #47403A;
  min-width: 70px;
  margin: 10px;
  padding: 10px;
  border-radius: 10px;
  display: inline-block;
}

.score {
  font-size: 28px;
  padding-top: 5px;
}

#grid {
  width: 430px;
  height: 430px;
  margin: 0 auto;
  background-color: #CBC2B3;
  position: relative;
}

#window {
  width: 430px;
  height: 430px;
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
}

.tile {
  width: 100px;
  height: 100px;
  border-radius: 10px;
  line-height: 100px;
  font-size: 50px;
  font-weight: bold;
  color: #47403A;
  vertical-align: middle;
  position: absolute;
  z-index: 1;
  transition-property: left, top
  transition-duration: 0ms;
  transition-timing-function: linear;
  -webkit-animation: entrance 120ms linear;
  animation: entrance 120ms linear;
}

@-webkit-keyframes entrance {
  0% {
    -webkit-transform: scale(0.5);
    -webkit-transform-origin: center;
  }
}

@keyframes entrance {
  0% {
    -ms-transform: scale(0.5);
    -ms-transform-origin: center;
    transform: scale(0.5);
    transform-origin: center;
  }
}

.small-font {
  font-size: 42px;
}

.smaller-font {
  font-size: 32px;
}

.smallest-font {
  font-size: 28px;
}

.white-font {
  color: white;
}

